fix: :bug: fix wrong offset on userCollapse

--- a/src/hideUsers.scss
+++ b/src/hideUsers.scss
@@ -1,5 +1,5 @@
 :root {
-  --hidden-user-width: 60px;
+  --hidden-user-width: 50px;
   --user-width: 264px;
 }
 
